@@ -58,7 +58,7 @@ class DepartmentServiceImplTest {
     var request = new CreateDepartmentRequest("HR", "invalid");
 
     assertThatThrownBy(() -> departmentService.createDepartment(request))
-        .isInstanceOf(IllegalArgumentException.class);
+      .isInstanceOf(IllegalArgumentException.class);
   }
 
   @Test
@@ -66,22 +66,22 @@ class DepartmentServiceImplTest {
     var request = new CreateDepartmentRequest("", "0123456789");
 
     assertThatThrownBy(() -> departmentService.createDepartment(request))
-        .isInstanceOf(IllegalArgumentException.class);
+      .isInstanceOf(IllegalArgumentException.class);
   }
 
   @Test
   void updateDepartment_updatesAndReturnsResponse() {
     var existing = Department.create(builder -> builder
-        .name("Ops")
-        .phoneNumber("0123456789"));
+      .name("Ops")
+      .phoneNumber("0123456789"));
     setDepartmentId(existing, "dep-2");
 
     when(departmentRepo.findById("dep-2")).thenReturn(Optional.of(existing));
     when(departmentRepo.save(existing)).thenReturn(existing);
 
     var response = departmentService.updateDepartment(
-        "dep-2",
-        new UpdateDepartmentRequest("Operations", "0987654321"));
+      "dep-2",
+      new UpdateDepartmentRequest("Operations", "0987654321"));
 
     assertThat(response.departmentId()).isEqualTo("dep-2");
     assertThat(response.name()).isEqualTo("Operations");
@@ -95,8 +95,8 @@ class DepartmentServiceImplTest {
     when(departmentRepo.findById("dep-2")).thenReturn(Optional.of(existing));
 
     assertThatThrownBy(() -> departmentService.updateDepartment(
-        "dep-2",
-        new UpdateDepartmentRequest("Operations", "123"))).isInstanceOf(IllegalArgumentException.class);
+      "dep-2",
+      new UpdateDepartmentRequest("Operations", "123"))).isInstanceOf(IllegalArgumentException.class);
   }
 
   @Test
@@ -104,26 +104,26 @@ class DepartmentServiceImplTest {
     when(departmentRepo.findById("missing")).thenReturn(Optional.empty());
 
     assertThatThrownBy(() -> departmentService.updateDepartment(
-        "missing",
-        new UpdateDepartmentRequest("Ops", "0123456789"))).isInstanceOf(IllegalArgumentException.class)
-        .hasMessage("Department not found");
+      "missing",
+      new UpdateDepartmentRequest("Ops", "0123456789"))).isInstanceOf(IllegalArgumentException.class)
+      .hasMessage("Department not found");
   }
 
   @Test
   void getDepartments_returnsPagedResponse() {
     var department = Department.create(builder -> builder
-        .name("Finance")
-        .phoneNumber("0123456789"));
+      .name("Finance")
+      .phoneNumber("0123456789"));
     setDepartmentId(department, "dep-3");
 
     var pageable = PageRequest.of(0, 2);
     when(departmentRepo.findAll(pageable))
-        .thenReturn(new PageImpl<>(List.of(department), pageable, 1));
+      .thenReturn(new PageImpl<>(List.of(department), pageable, 1));
 
     var response = departmentService.getDepartments(0, 2);
 
     assertThat(response.items()).hasSize(1);
-    assertThat(response.items().get(0).departmentId()).isEqualTo("dep-3");
+    assertThat(response.items().getFirst().departmentId()).isEqualTo("dep-3");
     assertThat(response.page()).isEqualTo(0);
     assertThat(response.size()).isEqualTo(2);
     assertThat(response.totalItems()).isEqualTo(1);
